--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
     </header>
 
 
-        <div class="box">
-            <button class="btn load-btn">Įkelti pavyzdinį failą</button>
-        </div>
+    <div class="container">
+        <button class="btn load-btn">Įkelti pavyzdinį failą</button>
+
+        <div class="message"></div>
+    </div>
         
 
 <script src="main.js"></script>
