--- a/board.html
+++ b/board.html
@@ -1,27 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
-    <title>Švieslentė</title>
-</head>
-<body>  
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="main.css" />
+    <title>Administracija</title>
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul class="menu">
-                <li class="menu__item"><a href="/">Administracija</a></li>
-                <li class="menu__item"><a href="/board">Švieslentė</a></li>
-                <li class="menu__item"><a href="/specialist">Specialisto puslapis</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul class="menu">
+          <li class="menu__item"><a href="/">Administracija</a></li>
+          <li class="menu__item"><a href="/board">Švieslentė</a></li>
+          <li class="menu__item">
+            <a href="/specialist">Specialisto puslapis</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
+    <div class="container">
+      <div class="board">
+        <table id="clients">
+          <tr>
+            <th>Kliento numeris</th>
+            <th>Langelis</th>
+          </tr>
 
-        
+        </table>
+      </div>
+    </div>
 
-<script src="main.js"></script>
-</body>
+    <script src="board.js"></script>
+  </body>
 </html>
