--- a/specialist.html
+++ b/specialist.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
-    <title>Specialisto puslapis</title>
+    <title>Administracija</title>
 </head>
 <body>  
 
@@ -19,9 +19,7 @@
         </nav>
     </header>
 
-
-        
-
 <script src="main.js"></script>
+
 </body>
 </html>
