added specialist page - LEVEL 1 DONE

--- a/index.html
+++ b/index.html
@@ -21,13 +21,19 @@
 
 
     <div class="container">
-        <button class="btn load-btn">Įkelti pavyzdinį failą</button>
+        <button class="btn load-btn">Įkelti pavyzdinių klientų failą</button>
+
+        <button class="btn add-client-btn">Pridėti naują klientą</button>
+
+        <div class="p-top-40">
+            <button class="btn" onclick="window.localStorage.clear()">Ištrinti visus klientus</button>
+        </div>
 
         <div class="message"></div>
     </div>
         
 
-<script src="main.js"></script>
+<script src="admin.js"></script>
 
 </body>
 </html>
