--- a/specialist.html
+++ b/specialist.html
@@ -1,25 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="main.css" />
     <title>Administracija</title>
-</head>
-<body>  
-
+  </head>
+  <body>
     <header>
-        <nav>
-            <ul class="menu">
-                <li class="menu__item"><a href="/">Administracija</a></li>
-                <li class="menu__item"><a href="/board">Švieslentė</a></li>
-                <li class="menu__item"><a href="/specialist">Specialisto puslapis</a></li>
-            </ul>
-        </nav>
+      <nav>
+        <ul class="menu">
+          <li class="menu__item"><a href="/">Administracija</a></li>
+          <li class="menu__item"><a href="/board">Švieslentė</a></li>
+          <li class="menu__item">
+            <a href="/specialist">Specialisto puslapis</a>
+          </li>
+        </ul>
+      </nav>
     </header>
 
-<script src="main.js"></script>
+    <div class="container">
+      <div class="specialists"></div>
 
-</body>
+      <div class="container">
+        <div class="board specialist-board">
+          <table id="clients">
+            <tr>
+              <th>Laukiantys klientai</th>
+              <th>Aptarnauta</th>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <script src="specialist.js"></script>
+  </body>
 </html>
