added client's page and ability to check how long did appointment took

--- a/index.html
+++ b/index.html
@@ -1,39 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="main.css" />
     <title>Administracija</title>
-</head>
-<body>  
-
+  </head>
+  <body>
     <header>
         <nav>
-            <ul class="menu">
-                <li class="menu__item"><a href="/">Administracija</a></li>
-                <li class="menu__item"><a href="/board">Švieslentė</a></li>
-                <li class="menu__item"><a href="/specialist">Specialisto puslapis</a></li>
-            </ul>
+          <ul class="menu">
+            <li class="menu__item"><a href="/">Administracija</a></li>
+            <li class="menu__item"><a href="/board">Švieslentė</a></li>
+            <li class="menu__item">
+              <a href="/specialist">Specialisto puslapis</a>
+            </li>
+            <li class="menu__item">
+              <a href="/client">Lankytojo puslapis</a>
+            </li>
+          </ul>
         </nav>
-    </header>
-
+      </header>
 
     <div class="container">
-        <button class="btn load-btn">Įkelti pavyzdinių klientų failą</button>
+      <button class="btn load-btn">Įkelti pavyzdinių klientų failą</button>
 
-        <button class="btn add-client-btn">Pridėti naują klientą</button>
+      <button class="btn add-client-btn">Pridėti naują klientą</button>
 
-        <div class="p-top-40">
-            <button class="btn" onclick="window.localStorage.clear()">Ištrinti visus klientus</button>
-        </div>
+      <div class="p-top-40">
+        <button class="btn" onclick="window.localStorage.clear()">
+          Ištrinti visus klientus
+        </button>
+      </div>
 
-        <div class="message"></div>
+      <div class="message"></div>
     </div>
-        
 
-<script src="admin.js"></script>
-
-</body>
+    <script src="admin.js"></script>
+  </body>
 </html>
