--- a/specialist.html
+++ b/specialist.html
@@ -16,6 +16,9 @@
           <li class="menu__item">
             <a href="/specialist">Specialisto puslapis</a>
           </li>
+          <li class="menu__item">
+            <a href="/client">Lankytojo puslapis</a>
+          </li>
         </ul>
       </nav>
     </header>
