--- a/client.html
+++ b/client.html
@@ -24,16 +24,19 @@
     </header>
 
     <div class="container">
-      <div class="board">
-        <table id="clients">
-          <tr>
-            <th>Kliento numeris</th>
-            <th>Langelis</th>
-          </tr>
-        </table>
-      </div>
+
+      <p>Įveskite lankytojo numerį</p>
+      <input class="enter-client-code" type="text">
+      <button class="btn check-client-btn">Tikrinti</button>
+
+
+      <div class="message"></div>
+      <div class="client-code"></div>
+      <div class="client-status"></div>
+      <div class="client-appointment-time"></div>
+      <div class="client-to-wait"></div>
     </div>
 
-    <script src="board.js"></script>
+    <script src="client.js"></script>
   </body>
 </html>
