--- a/board.html
+++ b/board.html
@@ -4,36 +4,71 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/materialize/css/materialize.min.css" />
     <link rel="stylesheet" href="main.css" />
-    <title>Administracija</title>
+    <title>Švieslentė</title>
   </head>
-  <body>
-    <header>
-      <nav>
-        <ul class="menu">
-          <li class="menu__item"><a href="/">Administracija</a></li>
-          <li class="menu__item"><a href="/board">Švieslentė</a></li>
-          <li class="menu__item">
+  <body class="board-page">
+    <nav class="light-blue lighten-1" role="navigation">
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="#" class="brand-logo"></a>
+
+        <ul class="right hide-on-med-and-down">
+          <li><a href="/">Administracija</a></li>
+          <li class="active"><a href="/board">Švieslentė</a></li>
+          <li>
             <a href="/specialist">Specialisto puslapis</a>
           </li>
-          <li class="menu__item">
+          <li>
             <a href="/client">Lankytojo puslapis</a>
           </li>
         </ul>
-      </nav>
-    </header>
+
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="/">Administracija</a></li>
+          <li class="active"><a href="/board">Švieslentė</a></li>
+          <li>
+            <a href="/specialist">Specialisto puslapis</a>
+          </li>
+          <li>
+            <a href="/client">Lankytojo puslapis</a>
+          </li>
+        </ul>
+
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
+      </div>
+    </nav>
 
     <div class="container">
       <div class="board">
         <table id="clients">
-          <tr>
-            <th>Kliento numeris</th>
-            <th>Langelis</th>
-          </tr>
+          <thead>
+            <tr class="light-blue lighten-1">
+              <th>Kliento numeris</th>
+              <th>Langelis</th>
+            </tr>
+          </thead>
+          <tbody></tbody>
         </table>
       </div>
+
+      <br /><br />
+      <!-- <div class="row center">
+        <button class="btn fullscreen">Open Fullscreen</button>
+      </div> -->
     </div>
 
+
+
+    
+    <script src="materialize/js/materialize.min.js"></script>
+    <script src="global.js"></script>
     <script src="board.js"></script>
   </body>
 </html>
