--- a/client.html
+++ b/client.html
@@ -4,39 +4,85 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/materialize/css/materialize.min.css" />
+    <link rel="stylesheet" href="client.css" />
     <link rel="stylesheet" href="main.css" />
-    <title>Administracija</title>
+    <title>Kliento puslapis</title>
   </head>
-  <body>
-    <header>
-      <nav>
-        <ul class="menu">
-          <li class="menu__item"><a href="/">Administracija</a></li>
-          <li class="menu__item"><a href="/board">Švieslentė</a></li>
-          <li class="menu__item">
+  <body class="client-page">
+    <nav class="light-blue lighten-1" role="navigation">
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="#" class="brand-logo"></a>
+
+        <ul class="right hide-on-med-and-down">
+          <li><a href="/">Administracija</a></li>
+          <li><a href="/board">Švieslentė</a></li>
+          <li>
             <a href="/specialist">Specialisto puslapis</a>
           </li>
-          <li class="menu__item">
+          <li class="active">
             <a href="/client">Lankytojo puslapis</a>
           </li>
         </ul>
-      </nav>
-    </header>
+
+        <ul id="nav-mobile" class="sidenav">
+          <li><a href="/">Administracija</a></li>
+          <li><a href="/board">Švieslentė</a></li>
+          <li>
+            <a href="/specialist">Specialisto puslapis</a>
+          </li>
+          <li class="active">
+            <a href="/client">Lankytojo puslapis</a>
+          </li>
+        </ul>
+
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
+      </div>
+    </nav>
 
     <div class="container">
-
-      <p>Įveskite lankytojo numerį</p>
-      <input class="enter-client-code" type="text">
-      <button class="btn check-client-btn">Tikrinti</button>
-
-
-      <div class="message"></div>
-      <div class="client-code"></div>
-      <div class="client-status"></div>
-      <div class="client-appointment-time"></div>
-      <div class="client-to-wait"></div>
+      <br /><br />
+      <div class="row">
+        <div class="col s12">
+          <h5>Įveskite lankytojo numerį:</h5>
+          <input class="enter-client-code" type="text" />
+          <button class="btn check-client-btn">Tikrinti</button>
+        </div>
+      </div>
     </div>
 
+    <div class="container">
+      <div class="row">
+        <div class="col s12">
+          <div class="relative">
+            <div class="alert absolute scale-transition scale-out" role="alert">
+              <i class="material-icons">warning</i>
+              <span class="alert__message"></span>
+              <button type="button" class="close-alert">×</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="col s12 l6 offset-l3">
+          <div class="card scale-transition scale-out">
+            <div class="card-content ">
+              <span class="card-title client-code"></span>
+              <p class="client-status"></p>
+              <p class="client-appointment-time"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="materialize/js/materialize.min.js"></script>
+    <script src="global.js"></script>
     <script src="client.js"></script>
   </body>
 </html>
