--- a/index.html
+++ b/index.html
@@ -4,39 +4,93 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/materialize/css/materialize.min.css" />
+    <link rel="stylesheet" href="admin.css" />
     <link rel="stylesheet" href="main.css" />
     <title>Administracija</title>
   </head>
-  <body>
-    <header>
-        <nav>
-          <ul class="menu">
-            <li class="menu__item"><a href="/">Administracija</a></li>
-            <li class="menu__item"><a href="/board">Švieslentė</a></li>
-            <li class="menu__item">
-              <a href="/specialist">Specialisto puslapis</a>
-            </li>
-            <li class="menu__item">
-              <a href="/client">Lankytojo puslapis</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
+  <body class="admin-page">
+    <nav class="light-blue lighten-1" role="navigation">
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="#" class="brand-logo"></a>
 
-    <div class="container">
-      <button class="btn load-btn">Įkelti pavyzdinių klientų failą</button>
+        <ul class="right hide-on-med-and-down">
+          <li class="active"><a href="/">Administracija</a></li>
+          <li><a href="/board">Švieslentė</a></li>
+          <li>
+            <a href="/specialist">Specialisto puslapis</a>
+          </li>
+          <li>
+            <a href="/client">Lankytojo puslapis</a>
+          </li>
+        </ul>
 
-      <button class="btn add-client-btn">Pridėti naują klientą</button>
+        <ul id="nav-mobile" class="sidenav">
+          <li class="active"><a href="/">Administracija</a></li>
+          <li><a href="/board">Švieslentė</a></li>
+          <li>
+            <a href="/specialist">Specialisto puslapis</a>
+          </li>
+          <li>
+            <a href="/client">Lankytojo puslapis</a>
+          </li>
+        </ul>
 
-      <div class="p-top-40">
-        <button class="btn" onclick="window.localStorage.clear()">
-          Ištrinti visus klientus
-        </button>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
       </div>
+    </nav>
 
-      <div class="message"></div>
+    <div class="section no-pad-bot" id="index-banner">
+      <div class="container">
+        <br /><br />
+
+        <div class="client-buttons">
+          <div class="row">
+            <div class="col s12">
+              <button class="btn-large waves-effect waves-light add-client-btn">
+                Registruoti naują klientą
+              </button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col s12 l6">
+              <button class="btn-large waves-effect waves-light orange load-btn">
+                Pavyzdniai klientai
+              </button>
+            </div>
+            <div class="col s12 l6">
+              <button
+                class="btn-large waves-effect waves-light red delete-btn">
+                Ištrinti visus klientus
+              </button>
+            </div>
+          </div>
+        </div>
+
+        <br /><br /><br /><br />
+
+        <div class="row">
+          <div class="col s12">
+            <div class="alert scale-transition scale-out" role="alert">
+              <i class="material-icons">warning</i>
+              <span class="alert__message"></span>
+              <button type="button" class="close-alert">×</button>
+            </div>
+          </div>
+        </div>
+
+        <br /><br />
+      </div>
     </div>
 
+    <script src="materialize/js/materialize.min.js"></script>
+    <script src="global.js"></script>
     <script src="admin.js"></script>
   </body>
 </html>
