--- a/specialist.html
+++ b/specialist.html
@@ -4,40 +4,68 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/materialize/css/materialize.min.css" />
     <link rel="stylesheet" href="main.css" />
-    <title>Administracija</title>
+    <title>Specialisto puslapis</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <ul class="menu">
-          <li class="menu__item"><a href="/">Administracija</a></li>
-          <li class="menu__item"><a href="/board">Švieslentė</a></li>
-          <li class="menu__item">
+    <nav class="light-blue lighten-1" role="navigation">
+      <div class="nav-wrapper container">
+        <a id="logo-container" href="#" class="brand-logo"></a>
+
+        <ul class="right hide-on-med-and-down">
+          <li><a href="/">Administracija</a></li>
+          <li><a href="/board">Švieslentė</a></li>
+          <li class="active">
             <a href="/specialist">Specialisto puslapis</a>
           </li>
-          <li class="menu__item">
+          <li>
             <a href="/client">Lankytojo puslapis</a>
           </li>
         </ul>
-      </nav>
-    </header>
+
+        <ul id="nav-mobile" class="sidenav">
+          <li class="active"><a href="/">Administracija</a></li>
+          <li><a href="/board">Švieslentė</a></li>
+          <li class="active">
+            <a href="/specialist">Specialisto puslapis</a>
+          </li>
+          <li>
+            <a href="/client">Lankytojo puslapis</a>
+          </li>
+        </ul>
+
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+          ><i class="material-icons">menu</i></a
+        >
+      </div>
+    </nav>
 
     <div class="container">
-      <div class="specialists"></div>
-
-      <div class="container">
-        <div class="board specialist-board">
-          <table id="clients">
-            <tr>
-              <th>Laukiantys klientai</th>
-              <th>Aptarnauta</th>
-            </tr>
-          </table>
+      <br />
+      <br />
+      <div class="row">
+        <div class="col s12 offset-l4 l4">
+          <div class="specialists"></div>
         </div>
       </div>
     </div>
 
+    <div class="container">
+      <div class="board specialist-board">
+        <table id="clients">
+          <thead></thead>
+          <tbody></tbody>
+        </table>
+      </div>
+    </div>
+
+    <script src="materialize/js/materialize.min.js"></script>
+    <script src="global.js"></script>
     <script src="specialist.js"></script>
   </body>
 </html>
