changed folder structure

--- a/board.html
+++ b/board.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/materialize/css/materialize.min.css" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="src/vendor/materialize/css/materialize.min.css" />
+    <link rel="stylesheet" href="src/css/global.css" />
     <title>Švieslentė</title>
   </head>
   <body class="board-page">
@@ -67,8 +67,8 @@
 
 
     
-    <script src="materialize/js/materialize.min.js"></script>
-    <script src="global.js"></script>
-    <script src="board.js"></script>
+    <script src="src/vendor/materialize/js/materialize.min.js"></script>
+    <script src="src/js/global.js"></script>
+    <script src="src/js/board.js"></script>
   </body>
 </html>
