--- a/client.html
+++ b/client.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/materialize/css/materialize.min.css" />
-    <link rel="stylesheet" href="client.css" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="src/vendor/materialize/css/materialize.min.css" />
+    <link rel="stylesheet" href="src/css/client.css" />
+    <link rel="stylesheet" href="src/css/global.css" />
     <title>Kliento puslapis</title>
   </head>
   <body class="client-page">
@@ -81,8 +81,8 @@
       </div>
     </div>
 
-    <script src="materialize/js/materialize.min.js"></script>
-    <script src="global.js"></script>
-    <script src="client.js"></script>
+    <script src="src/vendor/materialize/js/materialize.min.js"></script>
+    <script src="src/js/global.js"></script>
+    <script src="src/js/client.js"></script>
   </body>
 </html>
