--- a/specialist.html
+++ b/specialist.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/materialize/css/materialize.min.css" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="src/vendor/materialize/css/materialize.min.css" />
+    <link rel="stylesheet" href="src/css/global.css" />
     <title>Specialisto puslapis</title>
   </head>
   <body>
@@ -64,8 +64,8 @@
       </div>
     </div>
 
-    <script src="materialize/js/materialize.min.js"></script>
-    <script src="global.js"></script>
-    <script src="specialist.js"></script>
+    <script src="src/vendor/materialize/js/materialize.min.js"></script>
+    <script src="src/js/global.js"></script>
+    <script src="src/js/specialist.js"></script>
   </body>
 </html>
