--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/materialize/css/materialize.min.css" />
-    <link rel="stylesheet" href="admin.css" />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="src/vendor/materialize/css/materialize.min.css" />
+    <link rel="stylesheet" href="src/css/admin.css" />
+    <link rel="stylesheet" href="src/css/global.css" />
     <title>Administracija</title>
   </head>
   <body class="admin-page">
@@ -89,8 +89,8 @@
       </div>
     </div>
 
-    <script src="materialize/js/materialize.min.js"></script>
-    <script src="global.js"></script>
-    <script src="admin.js"></script>
+    <script src="src/vendor/materialize/js/materialize.min.js"></script>
+    <script src="src/js/global.js"></script>
+    <script src="src/js/admin.js"></script>
   </body>
 </html>
