--- a/board.html
+++ b/board.html
@@ -8,45 +8,50 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/vendor/materialize/css/materialize.min.css" />
+    <link
+      rel="stylesheet"
+      href="src/vendor/materialize/css/materialize.min.css"
+    />
     <link rel="stylesheet" href="src/css/global.css" />
     <title>Švieslentė</title>
   </head>
-  <body class="board-page">
-    <nav class="light-blue lighten-1" role="navigation">
-      <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo"></a>
+  <body>
+    <header>
+      <nav class="light-blue lighten-1" role="navigation">
+        <div class="nav-wrapper container">
+          <a id="logo-container" href="#" class="brand-logo"></a>
 
-        <ul class="right hide-on-med-and-down">
-          <li><a href="/">Administracija</a></li>
-          <li class="active"><a href="/board">Švieslentė</a></li>
-          <li>
-            <a href="/specialist">Specialisto puslapis</a>
-          </li>
-          <li>
-            <a href="/client">Lankytojo puslapis</a>
-          </li>
-        </ul>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="index.html">Administracija</a></li>
+            <li class="active"><a href="board.html">Švieslentė</a></li>
+            <li>
+              <a href="specialist.html">Specialisto puslapis</a>
+            </li>
+            <li>
+              <a href="client.html">Lankytojo puslapis</a>
+            </li>
+          </ul>
 
-        <ul id="nav-mobile" class="sidenav">
-          <li><a href="/">Administracija</a></li>
-          <li class="active"><a href="/board">Švieslentė</a></li>
-          <li>
-            <a href="/specialist">Specialisto puslapis</a>
-          </li>
-          <li>
-            <a href="/client">Lankytojo puslapis</a>
-          </li>
-        </ul>
+          <ul id="nav-mobile" class="sidenav">
+            <li><a href="index.html">Administracija</a></li>
+            <li class="active"><a href="board.html">Švieslentė</a></li>
+            <li>
+              <a href="specialist.html">Specialisto puslapis</a>
+            </li>
+            <li>
+              <a href="client.html">Lankytojo puslapis</a>
+            </li>
+          </ul>
 
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
-        >
-      </div>
-    </nav>
+          <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+            ><i class="material-icons">menu</i></a
+          >
+        </div>
+      </nav>
+    </header>
 
-    <div class="container">
-      <div class="board">
+    <main>
+      <div class="board container">
         <table id="clients">
           <thead>
             <tr class="light-blue lighten-1">
@@ -56,17 +61,14 @@
           </thead>
           <tbody></tbody>
         </table>
+
+        <br /><br />
+        <!-- <div class="row center">
+            <button class="btn fullscreen">Open Fullscreen</button>
+          </div> -->
       </div>
+    </main>
 
-      <br /><br />
-      <!-- <div class="row center">
-        <button class="btn fullscreen">Open Fullscreen</button>
-      </div> -->
-    </div>
-
-
-
-    
     <script src="src/vendor/materialize/js/materialize.min.js"></script>
     <script src="src/js/global.js"></script>
     <script src="src/js/board.js"></script>
