--- a/client.html
+++ b/client.html
@@ -14,72 +14,78 @@
     <title>Kliento puslapis</title>
   </head>
   <body class="client-page">
-    <nav class="light-blue lighten-1" role="navigation">
-      <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo"></a>
-
-        <ul class="right hide-on-med-and-down">
-          <li><a href="/">Administracija</a></li>
-          <li><a href="/board">Švieslentė</a></li>
-          <li>
-            <a href="/specialist">Specialisto puslapis</a>
-          </li>
-          <li class="active">
-            <a href="/client">Lankytojo puslapis</a>
-          </li>
-        </ul>
-
-        <ul id="nav-mobile" class="sidenav">
-          <li><a href="/">Administracija</a></li>
-          <li><a href="/board">Švieslentė</a></li>
-          <li>
-            <a href="/specialist">Specialisto puslapis</a>
-          </li>
-          <li class="active">
-            <a href="/client">Lankytojo puslapis</a>
-          </li>
-        </ul>
-
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
-        >
-      </div>
-    </nav>
-
-    <div class="container">
-      <br /><br />
-      <div class="row">
-        <div class="col s12">
-          <h5>Įveskite lankytojo numerį:</h5>
-          <input class="enter-client-code" type="text" />
-          <button class="btn check-client-btn">Tikrinti</button>
+    <header>
+      <nav class="light-blue lighten-1" role="navigation">
+        <div class="nav-wrapper container">
+          <a id="logo-container" href="#" class="brand-logo"></a>
+  
+          <ul class="right hide-on-med-and-down">
+            <li><a href="index.html">Administracija</a></li>
+            <li><a href="board.html">Švieslentė</a></li>
+            <li>
+              <a href="specialist.html">Specialisto puslapis</a>
+            </li>
+            <li class="active">
+              <a href="client.html">Lankytojo puslapis</a>
+            </li>
+          </ul>
+  
+          <ul id="nav-mobile" class="sidenav">
+            <li><a href="index.html">Administracija</a></li>
+            <li><a href="board.html">Švieslentė</a></li>
+            <li>
+              <a href="specialist.html">Specialisto puslapis</a>
+            </li>
+            <li class="active">
+              <a href="client.html">Lankytojo puslapis</a>
+            </li>
+          </ul>
+  
+          <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+            ><i class="material-icons">menu</i></a
+          >
         </div>
-      </div>
-    </div>
+      </nav>
+    </header>
 
-    <div class="container">
-      <div class="row">
-        <div class="col s12">
-          <div class="relative">
-            <div class="alert absolute scale-transition scale-out" role="alert">
-              <i class="material-icons">warning</i>
-              <span class="alert__message"></span>
-              <button type="button" class="close-alert">×</button>
+    <main>
+      <div class="client container">
+        <br /><br />
+        <div class="row">
+          <div class="col s12">
+            <div class="client__enter">
+              <h5>Įveskite lankytojo numerį:</h5>
+              <input class="enter-client-code" type="text" />
+              <button class="btn check-client-btn">Tikrinti</button>
             </div>
           </div>
         </div>
 
-        <div class="col s12 l6 offset-l3">
-          <div class="card scale-transition scale-out">
-            <div class="card-content ">
-              <span class="card-title client-code"></span>
-              <p class="client-status"></p>
-              <p class="client-appointment-time"></p>
+        <div class="row">
+
+          <div class="col s12">
+            <div class="client__notices relative">
+              <div class="alert absolute scale-transition scale-out" role="alert">
+                <i class="material-icons">warning</i>
+                <span class="alert-message"></span>
+                <button type="button" class="close-alert">×</button>
+              </div>
             </div>
           </div>
+  
+          <div class="col s12 l6 offset-l3">
+            <div class="client__info card scale-transition scale-out">
+              <div class="card-content ">
+                <span class="card-title client-code"></span>
+                <p class="client-status"></p>
+                <p class="client-appointment-time"></p>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
-    </div>
+    </main>
 
     <script src="src/vendor/materialize/js/materialize.min.js"></script>
     <script src="src/js/global.js"></script>
