--- a/index.html
+++ b/index.html
@@ -8,49 +8,54 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/vendor/materialize/css/materialize.min.css" />
+    <link
+      rel="stylesheet"
+      href="src/vendor/materialize/css/materialize.min.css"
+    />
     <link rel="stylesheet" href="src/css/admin.css" />
     <link rel="stylesheet" href="src/css/global.css" />
     <title>Administracija</title>
   </head>
-  <body class="admin-page">
-    <nav class="light-blue lighten-1" role="navigation">
-      <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo"></a>
+  <body>
+    <header>
+      <nav class="light-blue lighten-1" role="navigation">
+        <div class="nav-wrapper container">
+          <a id="logo-container" href="#" class="brand-logo"></a>
 
-        <ul class="right hide-on-med-and-down">
-          <li class="active"><a href="/">Administracija</a></li>
-          <li><a href="/board">Švieslentė</a></li>
-          <li>
-            <a href="/specialist">Specialisto puslapis</a>
-          </li>
-          <li>
-            <a href="/client">Lankytojo puslapis</a>
-          </li>
-        </ul>
+          <ul class="right hide-on-med-and-down">
+            <li class="active"><a href="index.html">Administracija</a></li>
+            <li><a href="board.html">Švieslentė</a></li>
+            <li>
+              <a href="specialist.html">Specialisto puslapis</a>
+            </li>
+            <li>
+              <a href="client.html">Lankytojo puslapis</a>
+            </li>
+          </ul>
 
-        <ul id="nav-mobile" class="sidenav">
-          <li class="active"><a href="/">Administracija</a></li>
-          <li><a href="/board">Švieslentė</a></li>
-          <li>
-            <a href="/specialist">Specialisto puslapis</a>
-          </li>
-          <li>
-            <a href="/client">Lankytojo puslapis</a>
-          </li>
-        </ul>
+          <ul id="nav-mobile" class="sidenav">
+            <li class="active"><a href="index.html">Administracija</a></li>
+            <li><a href="board.html">Švieslentė</a></li>
+            <li>
+              <a href="specialist.html">Specialisto puslapis</a>
+            </li>
+            <li>
+              <a href="client.html">Lankytojo puslapis</a>
+            </li>
+          </ul>
 
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
-        >
-      </div>
-    </nav>
+          <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+            ><i class="material-icons">menu</i></a
+          >
+        </div>
+      </nav>
+    </header>
 
-    <div class="section no-pad-bot" id="index-banner">
-      <div class="container">
+    <main>
+      <div class="admin container">
         <br /><br />
 
-        <div class="client-buttons">
+        <div class="admin__options">
           <div class="row">
             <div class="col s12">
               <button class="btn-large waves-effect waves-light add-client-btn">
@@ -60,13 +65,14 @@
           </div>
           <div class="row">
             <div class="col s12 l6">
-              <button class="btn-large waves-effect waves-light orange load-btn">
+              <button
+                class="btn-large waves-effect waves-light orange load-btn"
+              >
                 Pavyzdniai klientai
               </button>
             </div>
             <div class="col s12 l6">
-              <button
-                class="btn-large waves-effect waves-light red delete-btn">
+              <button class="btn-large waves-effect waves-light red delete-btn">
                 Ištrinti visus klientus
               </button>
             </div>
@@ -75,19 +81,19 @@
 
         <br /><br /><br /><br />
 
-        <div class="row">
-          <div class="col s12">
-            <div class="alert scale-transition scale-out" role="alert">
-              <i class="material-icons">warning</i>
-              <span class="alert__message"></span>
-              <button type="button" class="close-alert">×</button>
+        <div class="admin__notices">
+          <div class="row">
+            <div class="col s12">
+              <div class="alert scale-transition scale-out" role="alert">
+                <i class="material-icons">warning</i>
+                <span class="alert-message"></span>
+                <button type="button" class="close-alert">×</button>
+              </div>
             </div>
           </div>
         </div>
-
-        <br /><br />
       </div>
-    </div>
+    </main>
 
     <script src="src/vendor/materialize/js/materialize.min.js"></script>
     <script src="src/js/global.js"></script>
