--- a/specialist.html
+++ b/specialist.html
@@ -8,61 +8,70 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/vendor/materialize/css/materialize.min.css" />
+    <link
+      rel="stylesheet"
+      href="src/vendor/materialize/css/materialize.min.css"
+    />
     <link rel="stylesheet" href="src/css/global.css" />
     <title>Specialisto puslapis</title>
   </head>
   <body>
-    <nav class="light-blue lighten-1" role="navigation">
-      <div class="nav-wrapper container">
-        <a id="logo-container" href="#" class="brand-logo"></a>
+    <header>
+      <nav class="light-blue lighten-1" role="navigation">
+        <div class="nav-wrapper container">
+          <a id="logo-container" href="#" class="brand-logo"></a>
 
-        <ul class="right hide-on-med-and-down">
-          <li><a href="/">Administracija</a></li>
-          <li><a href="/board">Švieslentė</a></li>
-          <li class="active">
-            <a href="/specialist">Specialisto puslapis</a>
-          </li>
-          <li>
-            <a href="/client">Lankytojo puslapis</a>
-          </li>
-        </ul>
+          <ul class="right hide-on-med-and-down">
+            <li><a href="index.html">Administracija</a></li>
+            <li><a href="board.html">Švieslentė</a></li>
+            <li class="active">
+              <a href="specialist.html">Specialisto puslapis</a>
+            </li>
+            <li>
+              <a href="client.html">Lankytojo puslapis</a>
+            </li>
+          </ul>
 
-        <ul id="nav-mobile" class="sidenav">
-          <li class="active"><a href="/">Administracija</a></li>
-          <li><a href="/board">Švieslentė</a></li>
-          <li class="active">
-            <a href="/specialist">Specialisto puslapis</a>
-          </li>
-          <li>
-            <a href="/client">Lankytojo puslapis</a>
-          </li>
-        </ul>
+          <ul id="nav-mobile" class="sidenav">
+            <li class="active"><a href="index.html">Administracija</a></li>
+            <li><a href="board.html">Švieslentė</a></li>
+            <li class="active">
+              <a href="specialist.html">Specialisto puslapis</a>
+            </li>
+            <li>
+              <a href="client.html">Lankytojo puslapis</a>
+            </li>
+          </ul>
 
-        <a href="#" data-target="nav-mobile" class="sidenav-trigger"
-          ><i class="material-icons">menu</i></a
-        >
-      </div>
-    </nav>
+          <a href="#" data-target="nav-mobile" class="sidenav-trigger"
+            ><i class="material-icons">menu</i></a
+          >
+        </div>
+      </nav>
+    </header>
 
-    <div class="container">
-      <br />
-      <br />
-      <div class="row">
-        <div class="col s12 offset-l4 l4">
-          <div class="specialists"></div>
+    <main>
+      <div class="specialist container">
+        <br /><br />
+
+        <div class="row">
+          <div class="col s12 offset-l4 l4">
+            <div class="specialists__select"></div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col s12">
+            <div class="specialist__board">
+              <table id="clients">
+                <thead></thead>
+                <tbody></tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-
-    <div class="container">
-      <div class="board specialist-board">
-        <table id="clients">
-          <thead></thead>
-          <tbody></tbody>
-        </table>
-      </div>
-    </div>
+    </main>
 
     <script src="src/vendor/materialize/js/materialize.min.js"></script>
     <script src="src/js/global.js"></script>
