organized js code

--- a/board.html
+++ b/board.html
@@ -52,15 +52,26 @@
 
     <main>
       <div class="board container">
-        <table id="clients">
-          <thead>
-            <tr class="light-blue lighten-1">
-              <th>Kliento numeris</th>
-              <th>Langelis</th>
-            </tr>
-          </thead>
-          <tbody></tbody>
-        </table>
+        <div class="row">  
+          <div class="s12">
+            <table id="clients">
+              <thead>
+                <tr class="light-blue lighten-1">
+                  <th>Kliento numeris</th>
+                  <th>Langelis</th>
+                </tr>
+              </thead>
+              <tbody></tbody>
+            </table>
+          </div>
+        </div>
+
+        <div class="row">  
+          <div class="s12">
+            <div class="board__message"></div>
+          </div>
+        </div>
+
 
         <br /><br />
         <!-- <div class="row center">
