--- a/client.html
+++ b/client.html
@@ -55,7 +55,7 @@
           <div class="col s12">
             <div class="client__enter">
               <h5>Įveskite lankytojo numerį:</h5>
-              <input class="enter-client-code" type="text" />
+              <input class="enter-client-code" type="number" />
               <button class="btn check-client-btn">Tikrinti</button>
             </div>
           </div>
