--- a/board.html
+++ b/board.html
@@ -12,6 +12,7 @@
       rel="stylesheet"
       href="src/vendor/materialize/css/materialize.min.css"
     />
+    <link rel="stylesheet" href="src/css/board.css" />
     <link rel="stylesheet" href="src/css/global.css" />
     <title>Švieslentė</title>
   </head>
@@ -51,8 +52,8 @@
     </header>
 
     <main>
-      <div class="board container">
-        <div class="row">  
+      <div class="board container relative">
+        <div class="row">
           <div class="s12">
             <table id="clients">
               <thead>
@@ -66,17 +67,21 @@
           </div>
         </div>
 
-        <div class="row">  
+        <div class="row">
           <div class="s12">
             <div class="board__message"></div>
           </div>
         </div>
 
-
         <br /><br />
-        <!-- <div class="row center">
-            <button class="btn fullscreen">Open Fullscreen</button>
-          </div> -->
+        <div class="row center">
+          <div class="s12">
+            <button class="btn go-fullscreen">Open Fullscreen</button>
+          </div>
+        </div>
+
+        <button class="btn close-fullscreen hidden absolute">X</button>
+
       </div>
     </main>
 
