--- a/specialist.html
+++ b/specialist.html
@@ -33,7 +33,7 @@
           </ul>
 
           <ul id="nav-mobile" class="sidenav">
-            <li class="active"><a href="index.html">Administracija</a></li>
+            <li><a href="index.html">Administracija</a></li>
             <li><a href="board.html">Švieslentė</a></li>
             <li class="active">
               <a href="specialist.html">Specialisto puslapis</a>
