Set 'focus' to New Client Button, for faster registration of new clients

--- a/board.html
+++ b/board.html
@@ -76,7 +76,7 @@
         <br /><br />
         <div class="row center">
           <div class="s12">
-            <button class="btn go-fullscreen">Open Fullscreen</button>
+            <button class="btn go-fullscreen">Atidaryti Fullscreen</button>
           </div>
         </div>
 
