updated board with how long client will have to wait for appointment

--- a/board.html
+++ b/board.html
@@ -60,6 +60,7 @@
                 <tr class="light-blue lighten-1">
                   <th>Kliento numeris</th>
                   <th>Langelis</th>
+                  <th>Liko Laukti</th>
                 </tr>
               </thead>
               <tbody></tbody>
