added cancel appointment button

--- a/board.html
+++ b/board.html
@@ -77,12 +77,17 @@
         <br /><br />
         <div class="row center">
           <div class="s12">
-            <button class="btn go-fullscreen">Atidaryti Fullscreen</button>
+            <button class="btn go-fullscreen waves-effect waves-light">
+              Atidaryti Fullscreen
+            </button>
           </div>
         </div>
 
-        <button class="btn close-fullscreen hidden absolute">X</button>
-
+        <button
+          class="btn close-fullscreen hidden absolute waves-effect waves-light"
+        >
+          X
+        </button>
       </div>
     </main>
 
