--- a/client.html
+++ b/client.html
@@ -8,7 +8,10 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="src/vendor/materialize/css/materialize.min.css" />
+    <link
+      rel="stylesheet"
+      href="src/vendor/materialize/css/materialize.min.css"
+    />
     <link rel="stylesheet" href="src/css/client.css" />
     <link rel="stylesheet" href="src/css/global.css" />
     <title>Kliento puslapis</title>
@@ -18,7 +21,7 @@
       <nav class="light-blue lighten-1" role="navigation">
         <div class="nav-wrapper container">
           <a id="logo-container" href="#" class="brand-logo"></a>
-  
+
           <ul class="right hide-on-med-and-down">
             <li><a href="index.html">Administracija</a></li>
             <li><a href="board.html">Švieslentė</a></li>
@@ -29,7 +32,7 @@
               <a href="client.html">Lankytojo puslapis</a>
             </li>
           </ul>
-  
+
           <ul id="nav-mobile" class="sidenav">
             <li><a href="index.html">Administracija</a></li>
             <li><a href="board.html">Švieslentė</a></li>
@@ -40,7 +43,7 @@
               <a href="client.html">Lankytojo puslapis</a>
             </li>
           </ul>
-  
+
           <a href="#" data-target="nav-mobile" class="sidenav-trigger"
             ><i class="material-icons">menu</i></a
           >
@@ -56,33 +59,39 @@
             <div class="client__enter">
               <h5>Įveskite lankytojo numerį:</h5>
               <input class="enter-client-code" type="number" />
-              <button class="btn check-client-btn">Tikrinti</button>
+              <button class="btn check-client-btn waves-effect waves-light">
+                Tikrinti
+              </button>
             </div>
           </div>
         </div>
 
         <div class="row">
-
           <div class="col s12">
             <div class="client__notices relative">
-              <div class="alert absolute scale-transition scale-out" role="alert">
+              <div
+                class="alert absolute scale-transition scale-out"
+                role="alert"
+              >
                 <i class="material-icons">warning</i>
                 <span class="alert-message"></span>
                 <button type="button" class="close-alert">×</button>
               </div>
             </div>
           </div>
-  
+
           <div class="col s12 l6 offset-l3">
             <div class="client__info card scale-transition scale-out">
               <div class="card-content ">
-                <span class="card-title client-code"></span>
-                <p class="client-status"></p>
-                <p class="client-appointment-time"></p>
+                <span class="client__info__name card-title"></span>
+                <p class="client__info__code"></p>
+                <p class="client__info__status"></p>
+                <p class="client__info__line-position"></p>
+                <p class="client__info__appointment-time"></p>
+                <div class="client__info__cancel"></div>
               </div>
             </div>
           </div>
-
         </div>
       </div>
     </main>
